XWIKI-16140: Make quick search suggestions accessible * Fixed presentation on the showAllResults button. * Fixed lack of contrast on the "hide-button"

--- a/xwiki-platform-core/xwiki-platform-web/xwiki-platform-web-war/src/main/webapp/resources/uicomponents/search/searchSuggest.css
+++ b/xwiki-platform-core/xwiki-platform-web/xwiki-platform-web-war/src/main/webapp/resources/uicomponents/search/searchSuggest.css
@@ -22,12 +22,11 @@ ul.xlist li.showAllResults.loading {
 }
 
 ul.xlist li.showAllResults button.xitemcontainer {
-  width:100%;
   margin-left:0;
   padding-left:10px;
   border: 1px solid #EEEEEE;
   font-size: 1em;
-  height: 25px;
+  height:100%;
   padding-right: 10px;
   padding-top: 3px;
   text-align: right;
